--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"><!-- @version $Revision: 3037 $ ($Author: skarzhevskyy $) $Date: 2010-03-31 17:34:19 -0400 (Wed, 31 Mar 2010) $ -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"><!-- @version $Revision: 3037 $ ($Author: skarzhevskyy $) $Date: 2010-03-31 17:34:19 -0400 (Wed, 31 Mar 2010) $ -->
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.ultreia</groupId>
