--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"><!-- @version $Revision: 3037 $ ($Author: skarzhevskyy $) $Date: 2010-03-31 17:34:19 -0400 (Wed, 31 Mar 2010) $ -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"><!-- @version $Revision: 3037 $ ($Author: skarzhevskyy $) $Date: 2010-03-31 17:34:19 -0400 (Wed, 31 Mar 2010) $ -->
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.ultreia</groupId>
   <artifactId>bluecove</artifactId>
-  <version>2.1.1-SNAPSHOT</version>
+  <version>2.1.2-SNAPSHOT</version>
 
   <name>bluecove</name>
   <description>BlueCove is JSR-82 J2SE implementation that currently interfaces with the Mac OS X, WIDCOMM, BlueSoleil and Microsoft Bluetooth stack</description>
